--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://github.com/miss-gif" />
   <!-- <meta property="og:image" content="./images/이미지URL" /> -->
+  <!-- 구글 폰트 -->
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700&display=swap"
+    rel="stylesheet">
+  <!-- 폰트어썸 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- icon -->
+  <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
   <!-- CSS -->
   <!-- <link rel="icon" href="" /> -->
   <link rel="stylesheet" href="./CSS/style.css" />
@@ -25,6 +34,25 @@
   <script defer src="./JS/main.js"></script>
 </head>
 
-<body></body>
+<body>
+  <header class="header">
+    <h1><a href="#" class="logo"><img src="./images/logo.png" alt=""></a></h1>
+    <nav>
+      <ul class="navmenu">
+        <li><a href="#">home</a></li>
+        <li><a href="#">shop</a></li>
+        <li><a href="#">products</a></li>
+        <li><a href="#">page</a></li>
+        <li><a href="#">Docs</a></li>
+      </ul>
+    </nav>
+    <div class="nav-icon">
+      <a href="#"><i class='bx bx-search'></i></a>
+      <a href="#"><i class='bx bx-user'></i></a>
+      <a href="#"><i class='bx bx-cart'></i></a>
+      <div class="bx bx-menu" id="menu-icon"></div>
+    </div>
+  </header>
+</body>
 
 </html>
