--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
       <div class="bx bx-menu" id="menu-icon"></div>
     </div>
   </header>
+
+  <main>
+    <section class="main-home">
+      <div class="main-text">
+        <p class="sub-title">Winter Collection</p>
+        <h2>New Winter <br> Collection 2022</h2>
+        <p>There's Nothing like Trend</p>
+
+        <a href="#" class="main-btn">Shop Now <i class='bx bx-right-arrow-alt'></i></a>
+      </div>
+
+      <div class="down-arrow">
+        <a href="#trending" class="down"><i class='bx bx-down-arrow-alt'></i></a>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
