--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   </header>
 
   <main>
+    <!-- 섹션1 -->
     <section class="main-home">
       <div class="main-text">
         <p class="sub-title">Winter Collection</p>
@@ -67,6 +68,188 @@
       <div class="down-arrow">
         <a href="#trending" class="down"><i class='bx bx-down-arrow-alt'></i></a>
       </div>
+    </section>
+
+    <!-- 섹션2 -->
+    <section class="trending-product" id="trending">
+      <div class="center-text">
+        <h2>Our Trending <span>products</span></h2>
+      </div>
+
+      <div class="products">
+        <div class="row">
+          <img src="./images/1.jpg" alt="">
+          <div class="product-text">
+            <p>Sale</p>
+          </div>
+          <div class="heart-icon">
+            <i class='bx bx-heart'></i>
+          </div>
+          <div class="ratting">
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bxs-star-half'></i>
+          </div>
+
+          <div class="price">
+            <h3>Half Running Set</h3>
+            <p>$99 - $129</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="images/2.jpg" alt="">
+          <div class="product-text">
+            <p>New</p>
+          </div>
+          <div class="heart-icon">
+            <i class='bx bx-heart'></i>
+          </div>
+          <div class="ratting">
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bxs-star-half'></i>
+          </div>
+
+          <div class="price">
+            <h3>Formal Men Lowers</h3>
+            <p>$99 - $129</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="images/3.jpg" alt="">
+
+          <div class="heart-icon">
+            <i class='bx bx-heart'></i>
+          </div>
+          <div class="ratting">
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bxs-star-half'></i>
+          </div>
+
+          <div class="price">
+            <h3>Half Running Suit</h3>
+            <p>$99 - $129</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="images/4.jpg" alt="">
+          <div class="product-text">
+            <p>Hot</p>
+          </div>
+          <div class="heart-icon">
+            <i class='bx bx-heart'></i>
+          </div>
+          <div class="ratting">
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bxs-star-half'></i>
+          </div>
+
+          <div class="price">
+            <h3>Half Fancy Lady Dress</h3>
+            <p>$99 - $129</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="images/5.jpg" alt="">
+
+          <div class="heart-icon">
+            <i class='bx bx-heart'></i>
+          </div>
+          <div class="ratting">
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bxs-star-half'></i>
+          </div>
+
+          <div class="price">
+            <h3>Flix Flox Jeans</h3>
+            <p>$99 - $129</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="images/6.jpg" alt="">
+          <div class="product-text">
+            <p>Hot</p>
+          </div>
+          <div class="heart-icon">
+            <i class='bx bx-heart'></i>
+          </div>
+          <div class="ratting">
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bxs-star-half'></i>
+          </div>
+
+          <div class="price">
+            <h3>Fancy Salwar Suits</h3>
+            <p>$99 - $129</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="images/7.jpg" alt="">
+          <div class="product-text">
+            <p>Sale</p>
+          </div>
+          <div class="heart-icon">
+            <i class='bx bx-heart'></i>
+          </div>
+          <div class="ratting">
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bxs-star-half'></i>
+          </div>
+
+          <div class="price">
+            <h3>Printed Straight Kurta</h3>
+            <p>$99 - $129</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="images/8.jpg" alt="">
+          <div class="product-text">
+            <p>Sale</p>
+          </div>
+          <div class="heart-icon">
+            <i class='bx bx-heart'></i>
+          </div>
+          <div class="ratting">
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bx-star'></i>
+            <i class='bx bxs-star-half'></i>
+          </div>
+
+          <div class="price">
+            <h3>Collot Full Dress</h3>
+            <p>$99 - $129</p>
+          </div>
+        </div>
+      </div>
+
     </section>
   </main>
 </body>
