--- a/index.html
+++ b/index.html
@@ -251,6 +251,61 @@
       </div>
 
     </section>
+
+    <!-- 섹션3 -->
+    <section class="client-reviews">
+      <div class="reviews">
+        <h2>Client Reviews</h2>
+        <img src="images/team-1.jpg" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna <br>
+          aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis <br>
+          aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+
+        <h3>Mark Jevenue</h3>
+        <p>CEO of Addle</p>
+      </div>
+    </section>
+
+    <!-- 섹션4 -->
+    <section class="Update-news">
+      <div class="up-center-text">
+        <h2>New Updates</h2>
+      </div>
+
+      <div class="update-cart">
+        <div class="cart">
+          <img src="images/bl-1.png" alt="">
+          <span class="cart__time">26 jan 2022</span>
+          <h3>Let's Start bring sale on this summer vacation.</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis</p>
+
+          <p class="more-button">Continue Reading..</p>
+        </div>
+
+        <div class="cart">
+          <img src="images/bl-2.png" alt="">
+          <span class="cart__time">26 jan 2022</span>
+          <h3>Let's Start bring sale on this summer vacation.</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis</p>
+
+          <p class="more-button">Continue Reading..</p>
+        </div>
+
+        <div class="cart">
+          <img src="images/bl-3.png" alt="">
+          <span class="cart__time">26 jan 2022</span>
+          <h3>Let's Start bring sale on this summer vacation.</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis</p>
+
+          <p class="more-button">Continue Reading..</p>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 
