--- a/index.html
+++ b/index.html
@@ -306,7 +306,66 @@
         </div>
       </div>
     </section>
+
+
   </main>
+
+  <footer class="footer">
+    <div class="footer-info">
+      <div class="first-info">
+        <img src="images/logo.png" alt="">
+
+        <p>3245 Grant Street Longview, <br> TX united kingdom 765378</p>
+        <p>01601348732</p>
+        <p>saidulahmed3080@gmail.com</p>
+
+        <div class="social-icon">
+          <a href="#"><i class='bx bxl-facebook'></i></a>
+          <a href="#"><i class='bx bxl-twitter'></i></a>
+          <a href="#"><i class='bx bxl-instagram'></i></a>
+          <a href="#"><i class='bx bxl-youtube'></i></a>
+          <a href="#"><i class='bx bxl-linkedin'></i></a>
+        </div>
+      </div>
+
+      <div class="second-info">
+        <h4>Support</h4>
+        <p>Contact us</p>
+        <p>About page</p>
+        <p>Size Guide</p>
+        <p>Shopping & Resturns</p>
+        <p>Privacy</p>
+      </div>
+
+      <div class="third-info">
+        <h4>Shop</h4>
+        <p>Men's Shopping</p>
+        <p>Women's Shopping</p>
+        <p>Kids's Shopping</p>
+        <p>Furniture</p>
+        <p>Discount</p>
+      </div>
+
+      <div class="fourth-info">
+        <h4>Company</h4>
+        <p>About</p>
+        <p>Blog</p>
+        <p>Affiliate</p>
+        <p>Login</p>
+      </div>
+
+      <div class="five">
+        <h4>Subscribe</h4>
+        <p>Receive Updates, Hot Deals, Discounts Sent Straight In Your Inbox Daily</p>
+        <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Eum, Debitis.</p>
+        <p>Receive Updates, Hot Deals, Discounts Sent Straight In Your Inbox Daily</p>
+      </div>
+    </div>
+
+  </footer>
+  <div class="end-text">
+    <p>Copyright © @2022. All Rights Reserved.Designd By Saidul Islam.</p>
+  </div>
 </body>
 
 </html>
